# Linux

./: README.md
Linux程序设计/EXP3/学生成绩管理/: SchoolInfo  StuInfo  StuscoreInfo  addrecord  countScore  showInfo  stumanger  tempfile  test  update
Linux程序设计/EXP3/理论/: 1-2Variable  11modifyfiel  3ifcase  4ls_shfile  5odd  6.1+2+..n  7sumetc  8fun  9fun
Linux程序设计/EXP4/: back.rar
Linux程序设计/EXP4/back/: hello.c
Linux程序设计/EXP4/back/lib/: print.c
Linux程序设计/EXP4/test/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure.ac  hello
Linux程序设计/EXP4/test/.deps/: hello-hello.Po
Linux程序设计/EXP4/test/autom4te.cache/: output.1  requests
Linux程序设计/EXP4/test/lib/: Makefile  Makefile.am  Makefile.in
Linux程序设计/EXP4/test1/: Makefile  config.status  configure  hello
Linux程序设计/EXP4/test1/autom4te.cache/: requests  traces.0  traces.1
Linux程序设计/EXP4/test1/include/: print.h
Linux程序设计/EXP4/test1/lib/: Makefile  Makefile.am  Makefile.in
Linux程序设计/chap10/Autotools/test1/: Makefile  config.status
Linux程序设计/chap11/: academy.txt  ma  man  manStu.cpp  manage_student.cpp  newManStu.c
Linux程序设计/chap11/学生管理/: stu.sql
Linux程序设计/chap9/: debug3
Linux程序设计/chap9/makefileTest/: 2.c  Makefile2  Makefile3  Makefile5  foo  main.c
MyShell/: MyShell.rar
MyShell/MyShell/: MyShell.c  my
MyShell/reference/DIYShell/: first.c  first.out  second.c  second.out
MyShell/reference/StupidShell-master/: stupidShell
MyShell/reference/wshell-master/: test  wshell  wshell.c
MyShell/test/: Fork2.c  a.out  piptry.c  test1.c  test2.c  testFork.c
(+8 files in other folders)
